# alto2txt

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  alto2txt-verify.sh  extract_jisc.py  package-lock.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  spark_instructions.md
.github/workflows/: ci-tests.yml  deploy-to-pypi.yml  deploy-to-testpypi.yml  deploy.yml  pre-commit.yml  pythonpackage.yml
data_validation/fmp_examples/: 0000081_18470101_0001.xml  0000081_18470101_mets.xml  BLSD-1835-01-21.xml  README.md  WO1_MRTM_1831_01_01-0001-001.xml  WO1_MRTM_1831_01_01-0001.xml  checksums-hashdeep-snippet.txt  dir-sizes.txt  doctype-snippet.txt  find-filesanddirs-snippet.txt  no-xmlns.txt  num-files.txt  restructure.sh  total-size.txt  ukp.txt  validation.txt  wellformed-fail.txt  xmlns-file-snippet.txt  xmlns-snippet.txt  xmlns-xmlns.txt
dataframes_experiments/: dataframes_alto.py  dataframes_issues.py
demo-files/: README.md  demo.ipynb
demo-files/0002647/1824/0217/: 0002647_18240217_0001.xml  0002647_18240217_0002.xml  0002647_18240217_0004.xml  0002647_18240217_mets.xml
demo-files/1824/0217/: 0002647_18240217_0003.xml
demo-files/bl-repo-files/BLNewspapers_TheSouthStaffordshireExaminer_0002599_1874/0502/: 0002599_18740502_0001.xml  0002599_18740502_0002.xml  0002599_18740502_0003.xml  0002599_18740502_0004.xml  0002599_18740502_0005.xml  0002599_18740502_0006.xml  0002599_18740502_0007.xml  0002599_18740502_0008.xml  0002599_18740502_mets.xml
docs/: .nojekyll  Demo.md  README.md  _coverpage.md  _sidebar.md  advanced.md  contributing.md  index.html
extract_text/: logging_utils.py  multiprocess_xml_to_text.py  requirements.txt  spark_xml_to_text.py  xml.py  xml_to_text.py  xml_to_text_entry.py
extract_text/extract_text/xslts/: extract_text_mets18.xslt  extract_text_ukp.xslt
extract_text/tests/test_files/: instructions.md
extract_text/xslts/: extract_text_mets13.xslt  extract_text_mets18.xslt
ocr_heatmap/: heatmap.R  wordconfidence.py
src/alto2txt/: errors.py  extract_publications_text.py  logging_utils.py  multiprocess_xml_to_text.py  spark_xml_to_text.py  xml.py  xml_to_text.py  xml_to_text_entry.py
src/alto2txt/extract_text/: spark_xml_to_text.py
src/alto2txt/extract_text/xslts/: extract_text_common.xslt
src/alto2txt/xslts/: extract_text_common.xslt  extract_text_mets18.xslt
tests/: e2e.py  test_e2e.py  test_import.py
tests/tests/test_files/: README.md  instructions.md
tools/: PlotBlnWords.ipynb
tools/extract_text/: README.md  extract_jisc.py  extract_publication_text.py  extract_publications_text.py  extract_text.py  extract_text.xslt  extract_text_bln.xslt  extract_text_common.xslt  extract_text_mets13.xslt  extract_text_mets18.xslt  extract_text_ukp.xslt  extractbatch  extracttext  extracttext.xslt  logging.config  setup.py
tools/extract_text/extract_text/: logging_utils.py  multiprocess_xml_to_text.py  spark_xml_to_text.py  xml.py  xml_text.py  xml_to_text.py  xml_to_text_entry.py
tools/extract_text_ukp/: ukp_xml_to_text.py
(+50 files in other folders)
