[tool.poetry]
name = "alto2txt"
version = "0.3.2"
description = "extract plain text and minimal metadata from ALTO xml files"
authors=["Mike Jackson <mjackson@turing.ac.uk>", "David Beavan <dbeavan@turing.ac.uk>"]

license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.7.0"
lxml = "^4.7.1"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"
pytest = "^6.2.5"
icecream = "^2.1.2"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"
