[tool.poetry]
name = "alto2txt"
version = "0.3.4"
description = "extract plain text and minimal metadata from ALTO xml files"
authors = ["Mike Jackson <mjackson@turing.ac.uk>", "David Beavan <dbeavan@turing.ac.uk>"]
maintainers = ["Dr Griffith Rees <grees@turing.ac.uk"]

license = "MIT"
readme = "README.md"
repository = "https://github.com/Living-with-machines/alto2txt/"
keywords = ["XML", "text", "processing", "publications", "articles"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Text Processing",
]
documentation = "https://living-with-machines.github.io/alto2txt/"

[tool.poetry.dependencies]
python = ">3.7.0"
lxml = "^4.7.1"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"
pytest = "^6.2.5"
icecream = "^2.1.2"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
alto2txt = 'alto2txt.extract_publications_text:main'
