[tool.poetry]
name = "alto2txt"
version = "0.3.4"
description = "extract plain text and minimal metadata from ALTO xml files"
authors = [
  "Mike Jackson <mjackson@turing.ac.uk>",
  "David Beavan <dbeavan@turing.ac.uk>",
  "Andy Smith <a.smith@turing.ac.uk",
  "Daniel van Strien <dvanstrien@turing.ac.uk>",
  "Lydia France <lfrance@turing.ac.uk>",
  "Yann Ryan",
  "Federico Nanni <fnanni@turing.ac.uk>",
]
maintainers = ["Griffith Rees <grees@turing.ac.uk>"]

license = "MIT"
readme = "README.md"
repository = "https://github.com/Living-with-machines/alto2txt/"
keywords = ["XML", "text", "processing", "publications", "articles"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Text Processing",
]
documentation = "https://living-with-machines.github.io/alto2txt/"

[tool.poetry.dependencies]
python = ">=3.7.0"
lxml = "^4.7.1"

[tool.poetry.dev-dependencies]
black = "^23.1"
flake8 = "^5.0.4"
pytest = "^7.2.1"
icecream = "^2.1.2"
pre-commit = "^2.21.0"
coverage = {extras = ["toml"], version = "^7.2.5"}
pytest-cov = "^4.0.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
alto2txt = 'alto2txt.extract_publications_text:main'

[tool.pycln]
all = true

[tool.coverage.run]
relative_files = true

[tool.pytest.ini_options]
addopts = """
--cov=src/alto2txt
--cov-report=term:skip-covered
"""
pythonpath = [
  "src"
]
